--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "leapjs": "^1.1.0",
+    "leapjs-plugins": "^0.1.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-speech-recognition": "^3.8.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
